--- a/src/index.css
+++ b/src/index.css
@@ -222,3 +222,7 @@ body {
 .bg-gradient-blue {
   background: linear-gradient(91.99deg, #1f3864 -4.83%, #3f71ca 111.49%);
 }
+
+.shadow {
+  box-shadow: 5px 5px 10px 0px #0000004d;
+}
