--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import "tailwindcss";
 @font-face {
   font-family: "Metropolis";
@@ -163,6 +164,9 @@
 }
 .font-metropolis {
   font-family: "Metropolis", sans-serif;
+}
+.text-bebas {
+  font-family: "Bebas Neue", sans-serif;
 }
 
 body {
